src/objects/BLP_Curriculum__c.object
<CustomObject>
    <fields>
        <fullName>BLP_Curriculum_Title__c</fullName>
        <description>QUAL_TITLE from SuccessFactors Integration</description>
        <label>Curriculum Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Curriculum_Type__c</fullName>
        <description>CUR_TYPE from SuccessFactors Integration</description>
        <label>Curriculum Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Locale__c</fullName>
        <description>LOCALE_ID from SuccessFactors Integration</description>
        <label>Locale</label>
        <picklist>
            <picklistValues>
                <fullName>&quot;Chinese Simplified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugese Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish&quot;</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Subject_Area_Description__c</fullName>
        <description>SUBJ_AREA_DESC from SuccessFactors Integration</description>
        <label>Subject Area Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Subject_Area_Id__c</fullName>
        <description>SUBJ_AREA_ID from SuccessFactors Integration</description>
        <label>Subject Area Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_SuccessFactors_Id__c</fullName>
        <description>QUAL_ID from SuccessFactors Integration</description>
        <externalId>true</externalId>
        <label>SuccessFactors Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Area__c</fullName>
        <description>USER_VALUE_RESP from Successfactors Integration</description>
        <label>Responsible Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Curriculum</label>
    <nameField>
        <label>Curriculum Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Curriculum</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>